Fix card rendering and page layout issues

--- a/React challenges/PropProject2/digital banking ui webpage/src/index.css
+++ b/React challenges/PropProject2/digital banking ui webpage/src/index.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+.hero_scrollbar::-webkit-scrollbar{
+display:none;
+}
